# MapEditor

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.h  main.cpp
DefaultContent/Objects/: Cube.kobj  Sphere.kobj
Engine/Primitives/: Camera.cpp  Camera.h  Empty.cpp  Empty.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Texture.cpp  Texture.h
Engine/Renderer/: RDescriptors.cpp  RDescriptors.h  RTypes.cpp  RTypes.h  Renderer.cpp  Renderer.h
Engine/Scene/: Scene.cpp  Scene.h  SceneViewer.cpp  SceneViewer.h
Engine/Shaders/: frag.spv  shader.frag  shader.vert  vert.spv
Engine/Utils/: AssetLoader.cpp  AssetLoader.h  InputManager.cpp  InputManager.h
Primitives/: Texture.cpp  Texture.h
